# C-armTracker

./: AzureKinect.h  C-armOpenCV.files  C-armTracker.files  C-armTracker.includes  CMakeLists.txt  README.md  main.cpp
include/: AzureKinect.h  Functions.h  MultiDeviceCapturer.h  labeldata.h  labeldata.hh  xy_table.h
